--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -6,6 +6,7 @@
     android:layout_marginTop="14dp"
     android:layout_marginStart="20dp"
     android:layout_marginEnd="20dp"
+    app:cardBackgroundColor="@color/white"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -32,6 +33,7 @@
         android:layout_marginTop="40sp"
         android:layout_marginBottom="10dp"
         android:text="TextView"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/id_txt"
@@ -46,6 +48,7 @@
         android:layout_marginTop="90dp"
         android:layout_marginBottom="10dp"
         android:text="TextView"
+        android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView"
